Libraries update.